force-app/main/default/objects/IntervaloSol__c/IntervaloSol__c.object-meta.xml
<CustomObject>
    <label>Intervalo do Sol</label>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Código de Por do Sol</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intervalos de Sol</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>