force-app/main/default/objects/IntervaloSol__c/fields/Aero__c.field-meta.xml
<CustomField>
    <fullName>Aero__c</fullName>
    <description>Local de referência do nascer e por do sol</description>
    <inlineHelpText>Local de referência do nascer e por do sol</inlineHelpText>
    <label>Aero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>