force-app/main/default/objects/IntervaloSol__c/fields/Calculado__c.field-meta.xml
<CustomField>
    <fullName>Calculado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&quot;True&quot; para registros com nascer e pôr do sol calculados e &quot;False&quot; para dados que chegaram via API</description>
    <inlineHelpText>&quot;True&quot; para registros com nascer e pôr do sol calculados e &quot;False&quot; para dados que chegaram via API</inlineHelpText>
    <label>Calculado</label>
    <type>Checkbox</type>
</CustomField>