force-app/main/default/objects/IntervaloSol__c/fields/CodigoICAO__c.field-meta.xml
<CustomField>
    <fullName>CodigoICAO__c</fullName>
    <description>Código ICAO</description>
    <inlineHelpText>Código ICAO</inlineHelpText>
    <label>Código ICAO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>