force-app/main/default/objects/IntervaloSol__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Data de referência do por do sol</description>
    <label>Data</label>
    <type>Date</type>
</CustomField>