force-app/main/default/objects/IntervaloSol__c/fields/IcaoData__c.field-meta.xml
<CustomField>
    <fullName>IcaoData__c</fullName>
    <description>Chave para update e insert. 
Codigo ICAO + &apos; &apos; + data em formato &apos;dd/MM/yyyy&apos;</description>
    <externalId>true</externalId>
    <inlineHelpText>Chave para update e insert. 
Codigo ICAO + &apos; &apos; + data em formato &apos;dd/MM/yyyy&apos;</inlineHelpText>
    <label>ICAO e Data</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>