force-app/main/default/objects/IntervaloSol__c/fields/Sunrise__c.field-meta.xml
<CustomField>
    <fullName>Sunrise__c</fullName>
    <description>Hora do nascer do sol</description>
    <inlineHelpText>Hora do nascer do sol</inlineHelpText>
    <label>Nascer do Sol</label>
    <type>Time</type>
</CustomField>