force-app/main/default/objects/IntervaloSol__c/fields/Sunset__c.field-meta.xml
<CustomField>
    <fullName>Sunset__c</fullName>
    <description>Hora do por do sol</description>
    <inlineHelpText>Hora do por do sol</inlineHelpText>
    <label>Por do Sol</label>
    <type>Time</type>
</CustomField>