force-app/main/default/objects/IntervaloSol__c/fields/WeekDay__c.field-meta.xml
<CustomField>
    <fullName>WeekDay__c</fullName>
    <description>Número do dia da semana</description>
    <inlineHelpText>Número do dia da semana</inlineHelpText>
    <label>Dia da Semana</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>