force-app/main/default/objects/IntervaloSol__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>CodigoICAO__c</columns>
    <columns>WeekDay__c</columns>
    <columns>Sunrise__c</columns>
    <columns>Sunset__c</columns>
    <columns>Aero__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>10/2/2023</value>
    </filters>
    <label>Tudo</label>
</ListView>