force-app/main/default/objects/IntervaloSol__c/listViews/All_Solar_Day_Guiana.listView-meta.xml
<ListView>
    <fullName>All_Solar_Day_Guiana</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Aero__c</columns>
    <columns>Sunrise__c</columns>
    <columns>Sunset__c</columns>
    <columns>WeekDay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodigoICAO__c</field>
        <operation>equals</operation>
        <value>SYEC</value>
    </filters>
    <label>All Solar Day Guiana</label>
</ListView>